[workspace]
resolver = "2"
members = ["wire", "devtools", "examples/*"]

[workspace.package]
authors = ["CrabNebula <hello@crabnebula.dev>"]
edition = "2021"
version = "0.2.2"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabnebula-dev/devtools"

[workspace.dependencies]
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
tokio-stream = "0.1"
tauri = { version = "1.5.3", features = ["tracing"] }
tauri-build = "1.5.0"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio = "1.33.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
