[workspace]
resolver = "2"
members = [
  "crates/wire",
  "crates/devtools-core",
  "crates/devtools",
  "examples/*/src-tauri",
]
exclude = ["crates/devtools-v1", "crates/devtools", "examples/tauri-v1"]

[workspace.package]
authors = ["CrabNebula <hello@crabnebula.dev>"]
edition = "2021"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crabnebula-dev/devtools"

[workspace.dependencies]
devtools-core = { path = "./crates/devtools-core", version = "0.3.0" }
devtools-wire-format = { path = "./crates/wire", version = "0.4.0" }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
tokio-stream = "0.1"
tauri = { version = "2.0.0-beta.12", features = ["tracing"] }
tauri-build = "2.0.0-beta.10"
tauri-plugin = "2.0.0-beta.10"
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio = "1.36.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
