[package]
name = "cli"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-devtools-wire-format = { path = "../wire" }
tokio = { workspace = true, features = ["macros", "time"] }
prost = "0.12.1"
memmap2 = "0.9.0"
clap = { version = "4.4.8", features = ["derive"] }
tonic.workspace = true
tonic-web = "0.10"
async-stream = "0.3.5"
