[package]
name = "tauri_devtools"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri_devtools_shared = { path = "../shared" }
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
jsonrpsee = { workspace = true, features = [ "client-core", "server", "macros" ] }
jsonrpsee-core = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures.workspace = true
tauri.workspace = true
colored = "2.0.4"

[dev-dependencies]
tauri_devtools_shared = { path = "../shared", features = ["test_util"] }
fake = { version = "2.8", features = ["derive", "time", "dummy"] }
tauri = { workspace = true, features = ["test"] }
jsonrpsee = { workspace = true, features = [ "client-core", "ws-client", "server", "macros" ] }