[package]
name = "devtools"
description = "CrabNebula devtools for Tauri: Inspect, monitor, and understand your application with ease."
readme = "../README.md"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devtools-wire-format = { path = "../wire", version.workspace = true }
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tokio-stream = { workspace = true, features = ["fs"] }
tauri.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-web = "0.10"
tonic-health = "0.10"
tower-http = "0.4"
futures = "0.3.28"
bytes = "1.5.0"
ringbuf = "0.4.0-rc.2"
colored = "2.0"
async-stream = "0.3.5"

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }
