[package]
name = "file-icons"
authors = ["CrabNebula <hello@crabnebula.dev>"]
edition = "2021"
version = "0.1.0"
rust-version = "1.70.0"
license = "MIT or Apache-2.0"
repository = "https://github.com/crabnebula-dev/devtools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
fst = "0.4.7"
lazy_static = "1.4.0"
wee_alloc = "0.4.5"

[build-dependencies]
fst = "0.4.7"
