[package]
name = "inspector-protocol-primitives"
publish = false
readme = "../README.md"
description = ""
keywords = ["tauri", "inspector", "devtool", "protocol"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[features]

[dependencies]
serde.workspace = true
tokio.workspace = true
tauri.workspace = true
