[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
tracing.workspace = true
mdns-sd.workspace = true
tokio = { version = "^1.21", features = ["sync", "time", "macros", "tracing"] }
tracing-core = "0.1.24"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["transport"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tauri.workspace = true
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["fmt", "registry", "env-filter"] }
futures = "0.3.28"
hostname = "0.3.1"
if-addrs = "0.10.1"
