[package]
name = "tauri-plugin-devtools"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build.workspace = true

[dependencies]
devtools = { path = "../devtools/" }
tauri.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tonic.workspace = true
serde = "1"
tonic-health = "0.10"
colored = "2.0"
serde_json = "1"
futures = "0.3.28"
bytes = "1.5.0"
async-stream = "0.3.5"
local-ip-address = "0.5"

[target."cfg(target_os = \"ios\")".dependencies]
swift-rs = "1.0.1"
objc = "0.2"
cocoa = "0.24"
