[package]
name = "test-fixture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
subscriber = { path = "../subscriber" }
tracing.workspace = true
tokio = { version = "^1.21", features = ["time"] }
