[package]
name = "tauri_devtools_wire_format"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json.workspace = true
tauri.workspace = true
bitflags = "2.1.0"
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
tracing-core.workspace = true

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"