[package]
name = "devtools-wire-format"
description = "gRPC wire format for the CrabNebula devtools for Tauri"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing-core.workspace = true
tauri.workspace = true
serde_json = "1.0"
bitflags = "2.4"

[dev-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
