[package]
name = "crash-recovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crash-context = "0.6.1"
crash-handler = "0.6.0"
thiserror = "1.0.40"
cfg-if = "1.0"
tokio = { version = "1.28.2", features = ["rt", "net", "io-util"] }
interprocess = { version = "1.2.1", features = ["tokio_support"] }
minidump = "0.17.0"
minidump-writer = "0.8.1"
wire = { path = "../wire" }
tonic = { version = "0.9.2", features = ["transport"] }
bytes = "1.4.0"

[dev-dependencies]
sadness-generator = "0.5.0"

[[examples]]
name = "simple"
crate-type = ["bin"]

[[examples]]
name = "other"
crate-type = ["bin"]
