[package]
name = "crash-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wire = { path = "../wire" }
crash-context = "0.6.1"
crash-handler = "0.6.0"
thiserror = "1.0.40"
cfg-if = "1.0"
tokio = { workspace = true, features = ["net"] }
bytes.workspace = true
interprocess = { git = "https://github.com/kotauskas/interprocess", features = ["tokio"] }
futures-util = { workspace = true, features = ["io"] }
minidump-writer = "0.8.1"
tonic.workspace = true
portpicker = "0.1.1"

[dev-dependencies]
sadness-generator = "0.5.0"

[[examples]]
name = "simple"
crate-type = ["bin"]
