[package]
name = "devtools-core"
version = "0.3.4"
description = "CrabNebula devtools for Tauri: Inspect, monitor, and understand your application with ease."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devtools-wire-format = { path = "../wire", version = "0.5.1" }
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
tokio-stream = { workspace = true, features = ["fs"] }
prost-types.workspace = true
tonic.workspace = true
tonic-web = "0.10"
tonic-health = "0.10"
tower-http = "0.4"
tower-layer = "0.3"
futures = "0.3.30"
bytes = "1.7.1"
ringbuf = "0.4.4"
async-stream = "0.3.5"
http = "0.2"
hyper = "0.14"
tower = "0.4"
log = "0.4"
