[package]
name = "devtools"
version = "2.0.0-alpha.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build.workspace = true

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }

[dependencies]
devtools-core = { path = "../devtools-core/" }
tauri.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tonic.workspace = true
serde = "1"
tonic-health = "0.10"
colored = "2.1"
serde_json = "1"
futures = "0.3.30"
bytes = "1.5.0"
async-stream = "0.3.5"
local-ip-address = "0.5"

[target."cfg(target_os = \"ios\")".dependencies]
swift-rs = "1.0.6"
objc = "0.2"
cocoa = "0.25"
