[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wire = { path = "../wire" }
crash-reporter = { path = "../crash-reporter" }
tracing.workspace = true
tracing-core.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "tracing"] }
prost-types.workspace = true
tauri.workspace = true
tracing-subscriber = { version = "0.3.11", default-features = false, features = ["fmt", "registry", "env-filter"] }
tonic.workspace = true
tokio-stream = { version = "0.1", features = ["net", "sync"] }
parking_lot = "0.12.1"
portpicker = "0.1.1"
thiserror = "1.0.43"
futures-util.workspace = true
mdns-sd.workspace = true
# hdrhistogram = "7.5.2"
hostname = "0.3.1"
if-addrs = "0.10.1"
semver.workspace = true
