[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wire = { path = "../wire" }
tonic = { version = "0.9.2", features = ["transport"] }
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
