[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wire = { path = "../wire" }
tonic.workspace = true
tokio = { workspace = true, features = ["full"] }
mdns-sd.workspace = true
futures-util = "0.3.28"
bytes.workspace = true
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12.1"
