[package]
name = "wire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.1.0"
prost = "0.11.9"
prost-types = "0.11.9"
tonic = "0.9.2"
tracing-core = "0.1.30"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"