[package]
name = "devtools-wire-format"
version = "0.4.0"
description = "gRPC wire format for the CrabNebula devtools for Tauri"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing-core.workspace = true
bitflags = "2.4"

[dev-dependencies]
tonic-build = "0.10"
prost-build = "0.12"
