[package]
name = "example-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "tauri-example"
path = "main.rs"

[dependencies]
tauri = { version = "1.6.1", features = ["custom-protocol"] }
devtools = { path = "../../crates/v1/crates/devtools" }
tracing = "0.1"
tokio = { version = "1.36", features = ["time"] }
reqwest = "0.13.2"
tiny_http = "0.12.0"
serde = "1"

[build-dependencies]
tauri-build = "1"

