[package]
name = "example-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "tauri-example"
path = "main.rs"

[dependencies]
tauri.workspace = true
probe = { path = "../../probe" }
tracing.workspace = true
tokio = { workspace = true, features = ["time"] }
reqwest = "0.11"

[build-dependencies]
tauri-build.workspace = true