[package]
name = "inspector-protocol-subscriber"
publish = false
readme = "../../README.md"
description = ""
keywords = ["tauri", "inspector", "devtool", "protocol", "tracing", "subscriber"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[features]

[dependencies]
tokio = { workspace = true, features = ["macros", "time"] }
tracing-subscriber.workspace = true
tracing-core.workspace = true
inspector-protocol-primitives.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
