[package]
name = "tauri-plugin-devtools"
publish = true
readme = "../../README.md"
description = ""
keywords = ["tauri", "inspector", "devtool", "protocol", "plugin"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
tauri.workspace = true
tokio.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
serde_json.workspace = true

inspector-protocol-subscriber.workspace = true
inspector-protocol-primitives.workspace = true
inspector-protocol-server.workspace = true